--- a/data/nlu/responses/checklist_q_1.yml
+++ b/data/nlu/responses/checklist_q_1.yml
@@ -9,7 +9,7 @@ responses:
       - title: Tidak ❌
         payload: /deny
   - text: "Pada waktu bayi terlentang, apakah masing-masing lengan dan tungkai bergerak dengan mudah? Jawaban TIDAK bila salah satu atau kedua tungkai atau lengan bayi bergerak tak terarah/tak terkendali"
-    quick_replies:
+    buttons:
       - title: Ya ✅
         payload: /affirm
       - title: Tidak ❌
@@ -24,7 +24,7 @@ responses:
       - title: Tidak ❌
         payload: /deny
   - text: "Pada waktu bayi terlentang apakah ia melihat dan menatap wajah anda?"
-    quick_replies:
+    buttons:
       - title: Ya ✅
         payload: /affirm
       - title: Tidak ❌
@@ -39,7 +39,7 @@ responses:
       - title: Tidak ❌
         payload: /deny
   - text: "Apakah bayi dapat mengeluarkan suara-suara lain (ngoceh) selain menangis?"
-    quick_replies:
+    buttons:
       - title: Ya ✅
         payload: /affirm
       - title: Tidak ❌
@@ -54,7 +54,7 @@ responses:
       - title: Tidak ❌
         payload: /deny
   - text: "Pada waktu anda mengajak bayi berbicara dan tersenyum, apakah ia tersenyum kembali kepada anda?"
-    quick_replies:
+    buttons:
       - title: Ya ✅
         payload: /affirm
       - title: Tidak ❌
@@ -69,7 +69,7 @@ responses:
       - title: Tidak ❌
         payload: /deny
   - text: "Apakah bayi suka tertawa keras walau tidak digelitik atau diraba-raba?"
-    quick_replies:
+    buttons:
       - title: Ya ✅
         payload: /affirm
       - title: Tidak ❌
@@ -77,16 +77,16 @@ responses:
     channel: facebook
 
   utter_ask_question16:
-  - text: "Ambil sebuah benda, letakkan di atas wajah di depan mata, gerakkan wool dari samping kiri ke kanan kepala. Apakah ia dapat mengikuti gerakan anda dengan menggerakkan kepalanya dari kanan/kiri ke tengah?"
-    image: "https://i.ibb.co/MnRqQp1/Download.png"  
+  - image: "https://i.ibb.co/MnRqQp1/Download.png"  
+    text: "Ambil sebuah benda, letakkan di atas wajah di depan mata, gerakkan wool dari samping kiri ke kanan kepala. Apakah ia dapat mengikuti gerakan anda dengan menggerakkan kepalanya dari kanan/kiri ke tengah?"
     buttons:
       - title: Ya ✅
         payload: /affirm
       - title: Tidak ❌
         payload: /deny
-  - text: "Ambil sebuah benda, letakkan di atas wajah di depan mata, gerakkan wool dari samping kiri ke kanan kepala. Apakah ia dapat mengikuti gerakan anda dengan menggerakkan kepalanya dari kanan/kiri ke tengah?"
-    image: "https://i.ibb.co/MnRqQp1/Download.png"  
-    quick_replies:
+  - image: "https://i.ibb.co/MnRqQp1/Download.png" 
+    text: "Ambil sebuah benda, letakkan di atas wajah di depan mata, gerakkan wool dari samping kiri ke kanan kepala. Apakah ia dapat mengikuti gerakan anda dengan menggerakkan kepalanya dari kanan/kiri ke tengah?" 
+    buttons:
       - title: Ya ✅
         payload: /affirm
       - title: Tidak ❌
@@ -94,16 +94,16 @@ responses:
     channel: facebook
 
   utter_ask_question17:
-  - text: "Ambil sebuah benda, letakkan di atas wajah di depan mata, gerakkan wool dari samping kiri ke kanan kepala. Apakah ia dapat mengikuti gerakan anda dengan menggerakkan kepalanya dari satu sisi hampir sampai pada sisi yang lain?"
-    image: "https://i.imgur.com/d1RShLA.png"
+  - image: "https://i.imgur.com/d1RShLA.png"
+    text: "Ambil sebuah benda, letakkan di atas wajah di depan mata, gerakkan wool dari samping kiri ke kanan kepala. Apakah ia dapat mengikuti gerakan anda dengan menggerakkan kepalanya dari satu sisi hampir sampai pada sisi yang lain?"
     buttons:
       - title: Ya ✅
         payload: /affirm
       - title: Tidak ❌
         payload: /deny
-  - text: "Ambil sebuah benda, letakkan di atas wajah di depan mata, gerakkan wool dari samping kiri ke kanan kepala. Apakah ia dapat mengikuti gerakan anda dengan menggerakkan kepalanya dari satu sisi hampir sampai pada sisi yang lain?"
-    image: "https://i.imgur.com/d1RShLA.png"
-    quick_replies:
+  - image: "https://i.imgur.com/d1RShLA.png"
+    text: "Ambil sebuah benda, letakkan di atas wajah di depan mata, gerakkan wool dari samping kiri ke kanan kepala. Apakah ia dapat mengikuti gerakan anda dengan menggerakkan kepalanya dari satu sisi hampir sampai pada sisi yang lain?"
+    buttons:
       - title: Ya ✅
         payload: /affirm
       - title: Tidak ❌
@@ -111,16 +111,16 @@ responses:
     channel: facebook
 
   utter_ask_question18:
-  - text: "Pada waktu bayi telungkup di alas yang datar, apakah ia dapat mengangkat kepalanya seperti pada gambar ini"
-    image: "https://i.imgur.com/02lxPDt.png"
+  - image: "https://i.imgur.com/02lxPDt.png"
+    text: "Pada waktu bayi telungkup di alas yang datar, apakah ia dapat mengangkat kepalanya seperti pada gambar ini"
     buttons:
       - title: Ya ✅
         payload: /affirm
       - title: Tidak ❌
         payload: /deny
-  - text: "Pada waktu bayi telungkup di alas yang datar, apakah ia dapat mengangkat kepalanya seperti pada gambar ini"
-    image: "https://i.imgur.com/02lxPDt.png"
-    quick_replies:
+  - image: "https://i.imgur.com/02lxPDt.png"
+    text: "Pada waktu bayi telungkup di alas yang datar, apakah ia dapat mengangkat kepalanya seperti pada gambar ini"
+    buttons:
       - title: Ya ✅
         payload: /affirm
       - title: Tidak ❌
@@ -128,16 +128,16 @@ responses:
     channel: facebook
 
   utter_ask_question19:
-  - text: "Pada waktu bayi telungkup di alas yang datar, apakah ia dapat mengangkat kepalanya sehingga membentuk sudut 45˚ seperti pada gambar?"
-    image: "https://imgur.com/jpHwggB.png"
+  - image: "https://imgur.com/jpHwggB.png"
+    text: "Pada waktu bayi telungkup di alas yang datar, apakah ia dapat mengangkat kepalanya sehingga membentuk sudut 45˚ seperti pada gambar?"
     buttons:
       - title: Ya ✅
         payload: /affirm
       - title: Tidak ❌
         payload: /deny
-  - text: "Pada waktu bayi telungkup di alas yang datar, apakah ia dapat mengangkat kepalanya sehingga membentuk sudut 45˚ seperti pada gambar?"
-    image: "https://imgur.com/jpHwggB.png"
-    quick_replies:
+  - image: "https://imgur.com/jpHwggB.png"
+    text: "Pada waktu bayi telungkup di alas yang datar, apakah ia dapat mengangkat kepalanya sehingga membentuk sudut 45˚ seperti pada gambar?"
+    buttons:
       - title: Ya ✅
         payload: /affirm
       - title: Tidak ❌
@@ -145,16 +145,16 @@ responses:
     channel: facebook
 
   utter_ask_question110:
-  - text: "Pada waktu bayi telungkup di alas yang datar, apakah ia dapat mengangkat kepalanya dengan tegak seperti pada gambar?"
-    image: "https://imgur.com/jCA3pBy.png"
+  - image: "https://imgur.com/jCA3pBy.png"
+    text: "Pada waktu bayi telungkup di alas yang datar, apakah ia dapat mengangkat kepalanya dengan tegak seperti pada gambar?"
     buttons:
       - title: Ya ✅
         payload: /affirm
       - title: Tidak ❌
         payload: /deny
-  - text: "Pada waktu bayi telungkup di alas yang datar, apakah ia dapat mengangkat kepalanya dengan tegak seperti pada gambar?"
-    image: "https://imgur.com/jCA3pBy.png"
-    quick_replies:
+  - image: "https://imgur.com/jCA3pBy.png"
+    text: "Pada waktu bayi telungkup di alas yang datar, apakah ia dapat mengangkat kepalanya dengan tegak seperti pada gambar?"
+    buttons:
       - title: Ya ✅
         payload: /affirm
       - title: Tidak ❌
